# rejis

./: Cargo.toml  README.md
.github/workflows/: check.yml
rejis/: Cargo.toml
rejis-derive/: Cargo.toml
rejis-derive/src/: lib.rs
rejis-test-data/: Cargo.toml
rejis-test-data/src/: lib.rs
rejis/src/: database.rs  executor.rs  filter.rs  lib.rs  macros.rs  map.rs  path.rs  query.rs  table.rs  transform.rs
rejis/tests/: filtering.rs  macro_query.rs  mapping.rs  no_magic.rs
