[package]
name = "rejis-derive"
version = "0.1.0"
description = "Macros for automatically implementing rejis traits."
keywords = ["sqlite", "database", "json"]
repository = "https://github.com/MathiasPius/rejis"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
