[package]
name = "rejis-test-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rejis = { path = "../rejis" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.28", features = ["bundled"] }