[package]
name = "rejis"
version = "0.1.0"
description = "Adventures in type-safe querying of json-serializable structures in SQLite."
keywords = ["sqlite", "database", "json"]
repository = "https://github.com/MathiasPius/rejis"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rejis-derive = { version = "0.1.0", path = "../rejis-derive", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.28", features = ["bundled"] }

[features]
default = ["derive", "macros"]
derive = ["rejis-derive"]
macros = []


[dev-dependencies]
rejis-test-data = { version = "0.1.0", path = "../rejis-test-data" }
